# py-rcsb_utils_struct

./: HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-tox-job.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
rcsb/utils/struct/: CathClassificationProvider.py  CathClassificationUtils.py  CathDictionary.py  EcodClassificationProvider.py  EntryInfoProvider.py  Scop2ClassificationProvider.py  ScopClassificationProvider.py  ScopClassificationUtils.py  ScopDictionary.py
rcsb/utils/tests-struct/: CathClassificationUtilsTests.py  CathDictionaryTests.py  ScopClassificationUtilsTests.py  ScopDictionaryTests.py  testCathClassificationProvider.py  testCathClassificationUtils.py  testEcodClassificationProvider.py  testEntryInfoProvider.py  testScop2ClassificationProvider.py  testScopClassificationProvider.py  testScopClassificationUtils.py
rcsb/utils/tests-struct/test-data/: entry_info_details.json
